docs/samples/valid/dict_example.edl
let data: dict = {"a": 10, "b": 20, "c": 30};
print(data["a"]);
print(data["c"]);
