docs/samples/invalid/incorrect_dictionary_syntax_example.edl
// Expected error: dictionary literal entry is missing ':' between key and value.
let data: dict = {"a" 10, "b": 20};
print(data["a"]);
